# OpenWhatsApp

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: generate-icons.js
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  notifications.rs  session.rs  tray.rs  tweaks.rs
