[package]
name = "openwhatsapp"
version = "1.0.0"
description = "Lightweight WhatsApp client for Windows"
authors = ["Antoine Rossi"]
license = "MIT"
repository = "https://github.com/Antoinenz/openwhatsapp"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "openwhatsapp"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-ico",
  "image-png",
] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"   # smaller binary
codegen-units = 1 # better optimisation
lto = true
opt-level = "s"   # optimise for size
strip = true
